syntax = "proto3";
package donation.v1;

import "shared/type.proto";

option go_package = "github.com/twin-te/twin-te/back/handler/api/v4/rpcgen/donation/v1;donationv1";
option java_package = "net.twinte.api.donation.v1";

message PaymentUser {
  string id = 1;
  shared.UUID user_id = 2;
  optional string display_name = 3;
  optional string link = 4;
}

enum PaymentType {
  PAYMENT_TYPE_UNSPECIFIED = 0;
  PAYMENT_TYPE_ONE_TIME = 1;
  PAYMENT_TYPE_SUBSCRIPTION = 2;
}

enum PaymentStatus {
  PAYMENT_STATUS_UNSPECIFIED = 0;
  PAYMENT_STATUS_PENDING = 1;
  PAYMENT_STATUS_CANCELED = 2;
  PAYMENT_STATUS_SUCCEEDED = 3;
}

message PaymentHistory {
  string id = 1;
  PaymentType type = 2;
  PaymentStatus status = 3;
  int32 amount = 4;
  shared.RFC3339DateTime created_at = 5;
}

message SubscriptionPlan {
  string id = 1;
  string name = 2;
  int32 amount = 3;
}

message Subscription {
  string id = 1;
  SubscriptionPlan plan = 2;
  bool is_active = 3;
  shared.RFC3339DateTime created_at = 4;
}

message Contributor {
  string display_name = 1;
  optional string link = 2;
}
